COMMON_DRIVERS=${KERNEL_DIR}
KERNEL_DIR=common
. ${ROOT_DIR}/${KERNEL_DIR}/build.config.common
. ${ROOT_DIR}/${KERNEL_DIR}/build.config.aarch64
# . ${ROOT_DIR}/${KERNEL_DIR}/build.config.gki.aarch64
. ${COMMON_DRIVERS}/project/build.config.project
. ${COMMON_DRIVERS}/project/build.config.gki10

BUILD_INITRAMFS=1
LZ4_RAMDISK=1
DEFCONFIG=amlogic_gki10_defconfig
function pre_defconfig_cmds() {
	KCONFIG_DEFCONFIG=${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/${DEFCONFIG}
	local temp_file=`mktemp /tmp/config.XXXXXXXXXXXX`

	if [[ -z ${ANDROID_PROJECT} ]]; then
		echo "CONFIG_AMLOGIC_SERIAL_MESON=y" > ${temp_file}
		echo "CONFIG_AMLOGIC_SERIAL_MESON_CONSOLE=y" >> ${temp_file}
		echo "CONFIG_AMLOGIC_SERIAL_EARLY_CONSOLE=y" >> ${temp_file}
		echo "CONFIG_DEVTMPFS=y" >> ${temp_file}
	fi

	if [[ ${GKI_CONFIG} == gki_20 ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r ${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/gki_defconfig ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.fragment ${temp_file}
	else
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r ${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/gki_defconfig ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.fragment ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.10 ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.debug ${temp_file}
	fi

	rm ${temp_file}
}
export -f pre_defconfig_cmds
PRE_DEFCONFIG_CMDS=pre_defconfig_cmds
POST_DEFCONFIG_CMDS="rm ${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/${DEFCONFIG}"

MAKE_GOALS="
modules
dtbs
android_overlay_dt.dtbo
"

KMI_SYMBOL_LIST=android/abi_gki_aarch64_amlogic
GKI_MODULES_LIST=android/gki_aarch64_modules
