. ${ROOT_DIR}/${KERNEL_DIR}/build.config.gki.aarch64

COMMON_DRIVERS=common_drivers
. ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS}/project/build.config.project
. ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS}/project/build.config.gki10

[[ -n ${KASAN} ]] && LTO=none

echo "Base Kernel parm: LTO=${LTO} GKI_CONFIG=${GKI_CONFIG} ANDROID_PROJECT=${ANDROID_PROJECT} KASAN=${KASAN} CHECK_GKI_20=${CHECK_GKI_20}"

DEFCONFIG=amlogic_gki_defconfig
function pre_defconfig_cmds() {
	KCONFIG_DEFCONFIG=${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/${DEFCONFIG}
	local temp_file=`mktemp /tmp/config.XXXXXXXXXXXX`

	if [[ ${GKI_CONFIG} == gki_20 ]]; then
		if [[ -z ${ANDROID_PROJECT} ]]; then
			echo "CONFIG_AMLOGIC_DRIVER=y" > ${temp_file}
			#echo "CONFIG_AMLOGIC_BREAK_GKI=y" >> ${temp_file}
			echo "CONFIG_AMLOGIC_MODIFY=y" >> ${temp_file}
			echo "CONFIG_AMLOGIC_IN_KERNEL_MODULES=y" >> ${temp_file}

			echo "CONFIG_AMLOGIC_SERIAL_MESON=y" >> ${temp_file}
			echo "CONFIG_AMLOGIC_SERIAL_MESON_CONSOLE=y" >> ${temp_file}
			echo "CONFIG_AMLOGIC_SERIAL_EARLY_CONSOLE=y" >> ${temp_file}
			echo "CONFIG_DEVTMPFS=y" >> ${temp_file}
		fi
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r \
				${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/gki_defconfig \
				${temp_file}
	else
		echo "CONFIG_MODULE_SIG_ALL=y" > ${temp_file}
		if [[ -z ${ANDROID_PROJECT} ]]; then
			echo "CONFIG_AMLOGIC_SERIAL_MESON=y" >> ${temp_file}
			echo "CONFIG_DEVTMPFS=y" >> ${temp_file}
		fi

		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r \
				${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/gki_defconfig \
				${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.fragment \
				${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.10 \
				${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.debug \
				${temp_file}
	fi

	if [[ ${UPGRADE_PROJECT} == r || ${UPGRADE_PROJECT} == R ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r ${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_upgrade_r.defconfig
	fi
	if [[ ${UPGRADE_PROJECT} == p || ${UPGRADE_PROJECT} == P ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r ${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_upgrade_p.defconfig
	fi
	if [[ ${UPGRADE_PROJECT} == s || ${UPGRADE_PROJECT} == S ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r ${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_upgrade_s.defconfig
	fi
	if [[ ${UPGRADE_PROJECT} == u || ${UPGRADE_PROJECT} == U ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r ${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_upgrade_u.defconfig
	fi

	if [[ -n ${DEV_CONFIGS} ]]; then
		local config_list=$(echo ${DEV_CONFIGS}|sed 's/+/ /g')
		for config_name in ${config_list[@]}
		do
			if [[ -f ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/${config_name} ]]; then
				config_file=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/${config_name}
				KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r ${KCONFIG_DEFCONFIG} ${config_file}
			else
				echo "ERROR: config file ${config_name} is not in the right path!!"
				exit
			fi
		done
	fi

	if [[ -n ${KASAN} ]]; then
		echo "CONFIG_KASAN_GENERIC=y" > ${temp_file}
		# echo "CONFIG_KASAN_MODULE_TEST=m" >> ${temp_file}
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r \
				 ${KCONFIG_DEFCONFIG} \
				${temp_file}
	fi

	if [[ -n ${CHECK_GKI_20} ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig/merge_config.sh -m -r \
				${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/gki_defconfig
	fi

	rm ${temp_file}
}
export -f pre_defconfig_cmds
PRE_DEFCONFIG_CMDS=pre_defconfig_cmds

function post_defconfig_cmds() {
	rm -f ${ROOT_DIR}/${KERNEL_DIR}/arch/arm64/configs/${DEFCONFIG}

	if [[ -n ${DEV_CONFIGS} ]]; then
		local config_list=$(echo ${DEV_CONFIGS}|sed 's/+/ /g')
		for config_name in ${config_list[@]}
		do
			if [[ -f ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/${config_name} ]]; then
				rm -f ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/${config_name}
			else
				echo "ERROR: config file ${config_name} is not in the right path!!"
				exit
			fi
		done
	fi
}
export -f post_defconfig_cmds
POST_DEFCONFIG_CMDS=post_defconfig_cmds
